--- a/Tugas3/Tugas3.html
+++ b/Tugas3/Tugas3.html
@@ -9,11 +9,11 @@
 <body>
     <section>
         <nav>
-            <a href="#beranda"  class="logo">PORTOFOLIO</a>
+            <a href="Tugas3.html"  class="logo">PORTOFOLIO</a>
             <ul>
                 <li><a href="#data" id="About" >Personal Data</a></li>
                 <li><a href="#about" id="About" >About</a></li>
-                <li><a href="#resume">Resume</a></li>
+                <li><a href="#resume">Content</a></li>
             </ul>
         </nav>
     </section>
@@ -21,6 +21,11 @@
             <p>こんにちはようこそ,</p>
             <p>SAYA ILHAM TEGAR PRATAMA</p>
             <p><a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">LinkedIn</a></p>
+        </div>
+        <div class="scroll-down-arrow">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
         <div id="data" class="about-container">
             <img src="foto.jpeg" alt="" class="model2">
@@ -53,10 +58,8 @@
         <div id="resume" class="services">
             <div class="services-text">
                 <p>Unlocking The Future: Embracing The Digital Revolution For A Better Tomorrow</p>
-                <p>Red Hat adalah Perusahaan open source yang bergerak di bidang software yaitu sistem operasi linux yang mengacu ke dalam bidang edukasi yang sekarang ini bernama RHEL (Red Hat Enterprise Linux). Red Had mempunyai salah satu program yaitu program CSR (dhsv jsi) adalah kegiatan yang memfokuskan untuk para community dibidang akademisi untuk menjembatani antara industri, akademik, dan institusi. Red hat mempunyai software yang sekarang dinamakan Red Hat Academy.
-                   Red Hat Academy adalah sebuah platform untuk belajar materi di dalam Redhat secara gratis atau juga mirip dengan software E-learning seperti yang sudah anda ketahui. Red Hat Academy didalamnya terdapat modul-modul yang bisa dipelajari, di platform ini juga tidak sekedar modul yang dipelajari di platform ini bisa secara langsung praktik atau labs yang sudah disiapkan dari Red Hat Academy tanpa harus menginstal software lain dan ada juga video classroom. Red Had Academy menyediakan pelatihan atau sertifikasi secara global yang dimana sekarang persaingan di masa depan itu mengacu kepada sertifikasi. Didalam dunia pekerjaan akan mudah dikenal oleh HRD itu yang mempunyai Sertifikasi khusus.
-                   Perkembangan digital sekarang kita butuh adanya 3S yaitu Speed, Scal, Stability. Karena ketiga unsur tersebut aplikasi bisa semakin cepat work speednya dan stabilitasnya. Microservice adalah kondisi dimana kita memecahkan satu aplikasi. Realita sekarang di IT infrastrukturnya menggunakan Hybrid Cloud, adalah model komputasi awan yang menggabungkan dua atau lebih tipe lingkungan awan yang berbeda, seperti cloud publik dan cloud pribadi, menjadi satu lingkungan yang terintegrasi. Dalam model hybrid cloud, aplikasi dan data dapat bergerak bebas antara infrastruktur awan publik dan pribadi, sesuai dengan kebutuhan, keamanan, atau kinerja tertentu seperti AWS.Tetapi sekarang teknologi sudah mulai berubah ke arah public cloud. Red Hat memberikan solusi untuk membantu transisi kedalam aplikasi-aplikasi yang dulunya tradisional. Red Hat mempunyai partner seperti M-Banking, Aplikasi Jenius, Livin , M-BCA di android. </p>
-                <button class="cv-btn" >More</button>
+                <p>Red Hat adalah Perusahaan open source yang bergerak di bidang software yaitu sistem operasi linux yang mengacu ke dalam bidang edukasi yang sekarang ini bernama RHEL (Red Hat Enterprise Linux). Red Had mempunyai salah satu program yaitu program CSR (dhsv jsi) adalah kegiatan yang memfokuskan untuk para community dibidang akademisi untuk menjembatani antara industri, akademik, dan institusi. Red hat mempunyai software yang sekarang dinamakan Red Hat Academy.</p>
+                <button class="cv-btn" href="ringkasan.html">More</button>
             </div>
             
             <div class="services-text">
@@ -68,16 +71,15 @@
             <div class="box-container">
                 <div class="box-1">
                     <span>1</span>
-                    <p>HTML</p>
-                    <button>More</button>
+                    <p>HTML</p> <a href="WebStatis1.html"><button>More</button></a>
                 </div>
                 <div class="box-2">
                     <span>2</span>
-                    <p>Java</p> <button>More</button>
+                    <p>Java</p> <a href="#"><button>More</button></a>
                 </div>
                 <div class="box-3">
                     <span>3</span>
-                    <p>Python</p> <button>More</button>
+                    <p>Python</p> <a href="#"><button>More</button></a>
                 </div>
             </div>
         </div>
