--- a/Tugas3/Tugas3.html
+++ b/Tugas3/Tugas3.html
@@ -76,7 +76,7 @@
             <div class="box-container">
                 <div class="box-1">
                     <span>1</span>
-                    <p>HTML</p> <a href="WebStatis1.html"><button>More</button></a>
+                    <p>HTML</p> <a href="artikel.html"><button>More</button></a>
                 </div>
                 <div class="box-2">
                     <span>2</span>
